<resources>
    <string name="app_name">Papp</string>
    <string name="app_welcome_header">Welcome To Papp</string>
    <string name="app_save">Save Password</string>
    <string name="app_password_hint">App Lock Pin</string>
    <string name="app_password_access_hint">Your password</string>
    <string name="app_welcome">Bunch of text, that introduces and gives reasons for putting a password</string>
    <string name="app_ussd_description">This service helps retrieve ussd content</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">DashboardActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setup">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (optional)</string>
    <string name="prompt_name">Full name </string>
    <string name="action_setup">Save details</string>
    <string name="prompt_phone1">Phone number (1) </string>
    <string name="prompt_phone2">Phone number (2) </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_services">The services you provide (seperate with commas)</string>
    <string name="prompt_address">Full address or city</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_find">Some nearby services found</string>


</resources>
