<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bencorp.papp.LockActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorLockTop"
        android:id="@+id/header"
        android:orientation="vertical"
        android:padding="18dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_welcome_header"
            android:textColor="@color/colorLockText"
            android:gravity="center"
            android:textSize="30sp"
            />
        <!--<TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_welcome_header"
            android:gravity="center"
            android:textColor="@color/colorLockText"
            android:textSize="30sp"
            android:layout_gravity="top"/>-->
        <TextView
            android:id="@+id/slideMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_welcome"
            android:gravity="center"
            android:textColor="@color/colorLockText"
            android:textSize="15sp"
            android:paddingTop="20dp"

            />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
           android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/app_save"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/colorLockText"

            />

    </LinearLayout>




</RelativeLayout>
