<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bencorp.papp.SetupActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone1"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone2"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="6"
                    android:scrollHorizontally="false"
                    android:hint="@string/prompt_services"/>


            </android.support.design.widget.TextInputLayout>

            <TextView
               android:id="@+id/countryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Country (Tap to reload countries)"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/countries"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    >

                </android.support.v7.widget.AppCompatSpinner>

            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:id="@+id/country_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible"
                android:layout_gravity="right"
                />
            <TextView
                android:id="@+id/stateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="State (Tap to reload states)"
                android:textStyle="bold"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="25dp">

                </android.support.v7.widget.AppCompatSpinner>

            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:id="@+id/state_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                android:layout_gravity="right"
                />
            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="City"
                android:textStyle="bold"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="25dp">

                </android.support.v7.widget.AppCompatSpinner>

            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:id="@+id/city_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                android:layout_gravity="right"
                />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_address"/>


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!--<android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    android:background="@color/colorLockBtn"
                    android:layout_gravity="left"
                    android:src="@android:drawable/ic_menu_camera"
                    />-->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/selectPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    android:background="@color/colorLockBtn"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:textColor="@color/colorLockText"
                    app:elevation="14dp"

                />

                <ImageView
                    android:id="@+id/displayPicture"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/buttonstyle"
                    android:scaleType="centerCrop"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/setup"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_setup"
                android:textStyle="bold"
                android:background="@color/colorLockBtn"
                android:textColor="@color/colorLockText"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
